# studyOB1

OB02/: .coverage  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  __init__.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  test_run.py  user_management.py
OB02/tests/: test_user_management.py
OB02/user_management/: __init__.py  config.py
OB02/user_management/core/: __init__.py  admin.py  user.py
OB02/user_management/models/: __init__.py
OB02/user_management/utils/: __init__.py
OB02/user_management_system.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
ОВ01/: .gitignore  .pre-commit-config.yaml  README.md  __init__.py  check.py  pytest.ini  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  task_manager_store.py
ОВ01/task_manager_store/: README.md  __init__.py  main.py  py.typed  requirements.txt  setup.py  store.py  task.py
ОВ01/tests/: conftest.py  test_store.py  test_task.py
