[metadata]
description-file = README.md

[pycodestyle]
max-line-length = 88
exclude = .git,__pycache__,build,dist

[flake8]
max-line-length = 88
exclude = .git,__pycache__,build,dist
max-complexity = 10
select = B,C,E,F,W,T4,B9

[isort]
line_length = 88
include_trailing_comma = true
multi_line_output = 3
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[mypy]
python_version = 3.8
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
check_untyped_defs = True
disallow_untyped_decorators = True
no_implicit_optional = True
warn_redundant_casts = True
warn_unused_ignores = True
warn_no_return = True
warn_unreachable = True

[coverage:run]
source = user_management
omit = 
    */tests/*
    */__pycache__/*
    */migrations/*
    */settings/*
    */static/*
    */templates/*

[coverage:report]
show_missing = True
skip_covered = True
fail_under = 80

[tool:pytest]
testpaths = tests
python_files = test_*.py
addopts = -v --cov=user_management --cov-report=term-missing
